--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,15 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-D2CRMXCQ00"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-D2CRMXCQ00');
+	</script>
 	<body data-sveltekit-prefetch>
 		<div>%sveltekit.body%</div>
 	</body>
